# render-matic

./: Cargo.toml  README.md  build.rs  config.yaml
data/: backgrounds.yaml  components.yaml  entities.yaml  game_data.yaml  maps.yaml  resources.yaml  spritesheets.yaml
src/: component.rs  config.rs  data.rs  draw.rs  entity.rs  error.rs  geometry.rs  main.rs  pipeline.rs  render.rs  resource.rs  serial.rs  text.rs  texture.rs  time.rs
src/shaders/: shader.frag  shader.vert
