[package]
name = "render-matic"
version = "0.1.0"
authors = ["Ryan McGowan <ryan@internally-combusted.net>"]
edition = "2018"

[build-dependencies.shaderc]
version = "0.3.9"

[dependencies.gfx-backend-metal]
version = "0.1.1"

[dependencies.gfx-hal]
version = "0.1.0"

[dependencies.image]
version = "0.21.0"

[dependencies.lazy_static]
version = "1.3.0"

[dependencies.log]
version = "0.4.6"

[dependencies.nalgebra-glm]
version = "0.4.0"

[dependencies.rusttype]
version = "0.7.5"

[dependencies.serde]
version = "1.0.90"
features = ["derive"]

[dependencies.serde_yaml]
version = "0.8.8"

[dependencies.shaderc]
version = "0.3.9"

[dependencies.simple_logger]
version = "1.0.1"

[dependencies.winit]
version = "0.18.1"
